--- a/.github/workflows/v2_deploy.yml
+++ b/.github/workflows/v2_deploy.yml
@@ -1,24 +1,24 @@
-name: Push-to-EC2
+# name: Push-to-EC2
 
-# Trigger deployment only on push to master branch
-on:
-  push:
-    branches:
-      - master
+# # Trigger deployment only on push to master branch
+# on:
+#   push:
+#     branches:
+#       - master
 
-jobs:
-  deploy:
-    name: Deploy to EC2 on main branch push
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     name: Deploy to EC2 on main branch push
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout the files
-        uses: actions/checkout@v2
+#     steps:
+#       - name: Checkout the files
+#         uses: actions/checkout@v2
 
-      - name: Deploy to Server
-        uses: easingthemes/ssh-deploy@main
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          REMOTE_HOST: ${{ secrets.EC2_HOST }}
-          REMOTE_USER: ubuntu
-          TARGET: /home/ubuntu/PrakarshKaBot
+#       - name: Deploy to Server
+#         uses: easingthemes/ssh-deploy@main
+#         env:
+#           SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+#           REMOTE_HOST: ${{ secrets.EC2_HOST }}
+#           REMOTE_USER: ubuntu
+#           TARGET: /home/ubuntu/PrakarshKaBot
