--- a/.github/workflows/v2_deploy.yml
+++ b/.github/workflows/v2_deploy.yml
@@ -22,6 +22,9 @@ jobs:
           REMOTE_HOST: ${{ secrets.EC2_HOST }}
           REMOTE_USER: ubuntu
           TARGET: /home/ubuntu/PrakarshKaBot
+      - name: Copy files to EC2
+      run: |
+        scp -r -o StrictHostKeyChecking=no ../PrakarshKaBot ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/PrakarshKaBot
       - name: SSH into EC2 and set up environment
       run: |
         ssh -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
