Integrated LLM response

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-# Ignore Python virtual environment files
-venv/
-
-# Ignore .pem files
-*.pem
-
 .env 
+*.pem
 test.py
+temp.py
+test_function_calling.py
+
+# Ignore Useless files
+venv/
+__pycache__/
+*.log
