--- a/test/meta_test.yaml
+++ b/test/meta_test.yaml
@@ -14,8 +14,13 @@ commands:
       Use /hot_questions to see what crypto questions I can answer.
 
     select_option: "Select an option to proceed"
-  hot_question:
-    message: "This is example questions command"
+  hot_questions:
+    message: |
+      🔷1. Which cryptocurrencies are showing the most <b><i>rising liquidity</i></b> right now?
+      🔷2. Are there any coins with significant <b><i>buying pressure</i></b> that I should be watching?
+      🔷3. What are some <b><i>blue chips</i></b> that have shown <b><i>solid performance</i></b> recently?
+      🔷4. Are there any <b><i>risky bets</i></b> in the market with potential for high gains?
+      🔷5. What are the top <b><i>trending</i></b> cryptocurrencies right now?
   trade:
     message: "🎯 Ready to trade and conquer the crypto market? 🎯\nHead over to our cutting-edge webapp and unleash your trading potential! 📊💸\nExperience seamless trading like never before with CryptoTradeGPT! 🌐🔒"
   portfolio:
