--- a/test/meta_test.yaml
+++ b/test/meta_test.yaml
@@ -7,20 +7,21 @@ commands:
 
       Here's what I can do 👇
 
-      - Get the latest info and analytics about any Crypto currency.
-      - Ask me anything about buying pressure, liquidity, trends, and more!
-      - I can answer about risky bets, blue chips, top gainers/losers
+      👉 Get the latest info and analytics about any Crypto currency.
+      👉 Ask me anything about buying pressure, liquidity, trends, and more!
+      👉 I can answer about risky bets, blue chips, top gainers/losers
 
       Use /hot_questions to see what crypto questions I can answer.
 
-    select_option: "Select an option to proceed"
+    select_option: "Click on this option to begin"
   hot_questions:
-    message: |
-      🔷1. Which cryptocurrencies are showing the most <b><i>rising liquidity</i></b> right now?
-      🔷2. Are there any coins with significant <b><i>buying pressure</i></b> that I should be watching?
-      🔷3. What are some <b><i>blue chips</i></b> that have shown <b><i>solid performance</i></b> recently?
-      🔷4. Are there any <b><i>risky bets</i></b> in the market with potential for high gains?
-      🔷5. What are the top <b><i>trending</i></b> cryptocurrencies right now?
+    message: "Here are a few examples:"
+    template_questions: |
+      *️⃣ 1. Which cryptocurrencies are showing the most <b><i>rising liquidity</i></b> right now?
+      *️⃣ 2. Are there any coins with significant <b><i>buying pressure</i></b> that I should be watching?
+      *️⃣ 3. What are some <b><i>blue chips</i></b> that have shown <b><i>solid performance</i></b> recently?
+      *️⃣ 4. Are there any <b><i>risky bets</i></b> in the market with potential for high gains?
+      *️⃣ 5. What are the top <b><i>trending</i></b> cryptocurrencies right now?
   trade:
     message: "🎯 Ready to trade and conquer the crypto market? 🎯\nHead over to our cutting-edge webapp and unleash your trading potential! 📊💸\nExperience seamless trading like never before with CryptoTradeGPT! 🌐🔒"
   portfolio:
