--- a/.github/workflows/Deploy_ec2.yml
+++ b/.github/workflows/Deploy_ec2.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - master
-      - github-action
 
 jobs:
   deploy:
@@ -19,17 +18,6 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
-      - name: Create and populate .env file with secrets
-        run: |
-          ssh -o StrictHostKeyChecking=no ec2-user@54.202.77.125 << EOF
-            cd PrakarshKaBot
-            echo -n > .env
-            echo "TOKEN_PROD=${{ secrets.TOKEN_PROD }}" >> .env
-            echo "USERNAME_PROD=${{ secrets.USERNAME_PROD }}" >> .env
-            echo "TOKEN=${{ secrets.TOKEN }}" >> .env
-            echo "USERNAME=${{ secrets.USERNAME }}" >> .env
-            echo "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" >> .env
-          EOF
 
       - name: Run deployment script
         run: |
@@ -38,5 +26,5 @@ jobs:
             git pull origin master
             source venv/bin/activate
             pip install -r requirements.txt
-            nohup python server.py &
+            nohup python server.py 
           EOF
