--- a/.github/workflows/Deploy_ec2.yml
+++ b/.github/workflows/Deploy_ec2.yml
@@ -18,6 +18,15 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
+      - name: Create and populate .env file with secrets
+        run: |
+          ssh -o StrictHostKeyChecking=no ec2-user@54.202.77.125 << EOF
+            cd PrakarshKaBot
+            echo -n > .env
+            echo "TOKEN=${{ secrets.TOKEN }}" >> .env
+            echo "USERNAME=${{ secrets.USERNAME }}" >> .env
+            echo "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" >> .env
+          EOF
 
       - name: Run deployment script
         run: |
@@ -26,5 +35,5 @@ jobs:
             git pull origin master
             source venv/bin/activate
             pip install -r requirements.txt
-            nohup python server.py 
+            nohup python server.py &
           EOF
